Fix background-image URL syntax in style.css: Enclose URLs in quotes for consistency and improved readability.

--- a/css/style.css
+++ b/css/style.css
@@ -219,23 +219,23 @@ footer {
 }
 
 .github {
-	background-image: url(../img/GitHub.svg);
+	background-image: url('../img/GitHub.svg');
 }
 
 .gitlab {
-	background-image: url(../img/GitLab.svg);
+	background-image: url('../img/GitLab.svg');
 }
 
 .telegram {
-	background-image: url(../img/Telegram.svg);
+	background-image: url('../img/Telegram.svg');
 }
 
 .instagram {
-	background-image: url(../img/Instagram.svg);
+	background-image: url('../img/Instagram.svg');
 }
 
 .vk {
-	background-image: url(../img/VK.svg);
+	background-image: url('../img/VK.svg');
 }
 
 .contact {
